--- a/src/components/HomeHighlights.css
+++ b/src/components/HomeHighlights.css
@@ -1,5 +1,58 @@
+@media (min-width: 600px) {
+    .home-highlights-special-card > h4 {
+        font-size: 1.3vw
+    }
+
+    .home-highlights-special-card > p {
+        flex-basis: 35%;
+    }
+}
+
+@media (max-width: 599px) {
+    .home-highlights-special-card > h4 {
+        font-size: 2.2vw
+    }
+
+    .home-highlights-special-card > p {
+        flex-basis: 30%;
+    }
+}
+
 .home-highlights > h3 {
     flex-basis: 70%;
     flex-shrink: 0;
     margin: 2vw 0;
+}
+
+.home-highlights-special-card > h4 {
+    display: flex;
+    justify-content: space-between;
+    flex-shrink: 0;
+    width: 90%;
+    margin-top: 1vw;
+}
+
+.home-highlights-special-card > p {
+    flex-shrink: 0;
+    width: 90%;
+    line-height: 2vw;
+    color: #495e57;
+}
+
+.home-highlights-special-card > h5 {
+    margin: 0;
+    margin-left: 7.5%;
+    margin-right: 2.5%;
+}
+
+.home-highlights-special-card {
+    flex-shrink: 0;
+    flex-basis: 32%;
+    display: flex;
+    flex-direction: column;
+    height: 72%;
+    margin-bottom: 8%;
+    align-items: center;
+    background-color: #edefee;
+    border-radius: 1vw 1vw 0vw 0vw;
 }
